<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/image_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_photo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/item_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_below="@id/image_thumbnail"
            android:padding="8dp"
            app:cardCornerRadius="28dp"
            app:elevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/image_title_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/search_image_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#FF424242"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_title_title"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_author_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_title"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/search_image_autor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FF424242"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_author_title"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_author"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/detail_image_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FF424242"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_date_title"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_date"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/detail_image_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FF424242"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/image_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_description_title"
                    android:layout_alignStart="@+id/image_title_title"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>